<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.nyp.alltodaysduties.showDutiesActivity"
    >

    <item
        android:id="@+id/action_start_pendenzen"
        android:orderInCategory="1"
        android:title="@string/menu_pendenzen"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_start_apprentices"
        android:orderInCategory="2"
        android:title="@string/menu_apprentices"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/menu_logout"
        app:showAsAction="never"
        />
</menu>