<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_login_email"
        android:layout_width="@dimen/pw_e_width"
        android:layout_height="@dimen/s_logged_in_height"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textview_login_email"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_email"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/textview_login_email"
        android:layout_width="@dimen/email_width"
        android:layout_height="@dimen/email_height"
        android:layout_marginStart="@dimen/margin_email"
        android:layout_marginLeft="@dimen/margin_email"
        android:layout_marginTop="@dimen/margin_top_email"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_login_passwort"
        android:layout_width="@dimen/pw_e_width"
        android:layout_height="@dimen/s_logged_in_height"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textview_login_passwort"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_passwort"
        tools:text="@string/passwort" />

    <TextView
        android:id="@+id/textview_login_passwort"
        android:layout_width="@dimen/pw_width"
        android:layout_height="@dimen/pw_height"
        android:layout_marginTop="@dimen/margin_top_pw"
        android:text="@string/passwort"
        app:layout_constraintStart_toStartOf="@+id/edittext_login_email"
        app:layout_constraintTop_toBottomOf="@+id/edittext_login_email" />

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edittext_login_passwort"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/edittext_login_passwort"
        app:layout_constraintTop_toBottomOf="@+id/edittext_login_passwort"
        />

    <TextView
        android:id="@+id/textview_login_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top_register"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/button_login_login"
        app:layout_constraintStart_toStartOf="@+id/button_login_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login_login"
        />
</android.support.constraint.ConstraintLayout>